--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,29 +1,42 @@
-.intro h1 {
+.body {
+  background-color: aliceblue;
+  padding: 8px;
+}
+.body h1 {
+  font-size: xx-large;
   text-align: center;
-}
-.intro {
-  /* position: absolute;
-  top: 30%;
-  left: 50%;
-  transform: translate(-50%, -50%); */
-  /* background-image: url("zachary-nelson-98Elr-LIvD8-unsplash.jpg"); */
-  background-size: cover;
-  background-position: center;
-  height: 300px;
-}
-
-.intro button {
-  /* position: absolute; */
-  background-color: blue;
-  color: white;
-  border-radius: 8px;
-  /* left: 50%;
-  top: 150%; */
-  /* transform: translate(-50%, -50%); */
-
-  padding: 16px;
 }
 .head {
   font-size: xx-large;
   color: blue;
+  text-align: center;
+}
+
+.home-button {
+  background-color: blue;
+  color: white;
+  border-radius: 32px;
+
+  padding: 16px;
+}
+.home-button:hover {
+  font-weight: bold;
+}
+.body p {
+  display: flex;
+  align-items: center;
+  gap: 4px;
+  justify-content: center;
+}
+.body-tech {
+  color: blue;
+}
+.section1 h2 {
+  font-weight: bold;
+  font-size: x-large;
+}
+.p1 {
+  margin-left: 15%;
+  width: 70%;
+  text-align: center;
 }
