--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,8 +1,7 @@
 .body {
   background-color: aliceblue;
-  padding: 8px;
 }
-.body h1 {
+.intro {
   font-size: xx-large;
   text-align: center;
 }
@@ -10,13 +9,14 @@
   font-size: xx-large;
   color: blue;
   text-align: center;
+  text-decoration: underline;
 }
 
 .home-button {
   background-color: blue;
   color: white;
   border-radius: 32px;
-
+  margin-left: 40%;
   padding: 16px;
 }
 .home-button:hover {
@@ -39,4 +39,36 @@
   margin-left: 15%;
   width: 70%;
   text-align: center;
+}
+
+.box {
+  position: absolute;
+  top: 50%;
+  left: 38%;
+  transform: translate(-50%, -50%);
+
+  padding: 100px;
+  margin-left: 15%;
+}
+.background {
+  width: 100%;
+  height: 700px;
+}
+.image {
+  width: 100%;
+}
+.section3 {
+  display: grid;
+  grid-auto-flow: column;
+}
+.section3 h1 {
+  font-size: x-large;
+  text-align: center;
+  color: blue;
+}
+.section3 p {
+  font-weight: bold;
+}
+.column1 {
+  padding: 64px;
 }
