--- a/client/src/components/NavBar.css
+++ b/client/src/components/NavBar.css
@@ -3,6 +3,9 @@
   display: flex;
   justify-content: space-between;
   padding: 8px;
+  width: 99%;
+  position: fixed;
+  top: 0;
 }
 .navigation {
   display: flex;
