--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -1,21 +1,29 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-:root{--primary:#a2c200;--grey:#f7f7f7;--white:#fff;--xs:4px;--s:8px;--m:16px;--l:24px;}
+:root{--primary:blue;}
 body{font-family:'Open Sans',sans-serif;margin:0;background-color:#f4f4f4;}
 *{box-sizing:border-box;}
 a{text-decoration:none;color:#000;}
 li{list-style-type:none;}
 
 .NavBar-container{background-color:#fff;border-bottom:2px solid #f0f0f0;position:fixed;width:100%;top:0;}
-.NavBar-content{width:800px;margin:auto;display:flex;}
-.NavBar-title{color:blue;padding:0 30px;flex:1 0 25%;font-family:Chalkduster, fantasy;}
+.NavBar-content{width:950px;margin:auto;display:flex;}
+.NavBar-title{color:var(--primary);padding:0 30px;font-family:Chalkduster, fantasy;}
 .NavBar-title h2{font-size:22px;}
-.NavBar-linkContainer{padding:23px;flex:1 0 55%;display:flex;}
-.NavBar-link{margin:0 15px;font-size:15px;}
+.NavBar-linkContainer{padding:23px;display:flex;}
+.NavBar-link{margin:0 15px;font-size:15px;font-weight:bold;}
 .NavBar-link:hover, .NavBar-dropitem:hover{text-decoration:underline;}
+.NavBar-postLink{background-color:#b3b3b3;padding:6.5px 17px;
+font-weight:bold;font-size:15px;display:block;}
+.NavBar-postLink:hover{text-decoration:none;}
 .NavBar-linkDrop{cursor:default;}
 .NavBar-linkDrop:hover{text-decoration:none;}
-.NavBar-loginContainer{flex:1 0 20%;padding:17px 0 0;}
 .NavBar-login{background-color:#b10303;border:none;padding:8px 17px;color:#fff;font-weight:bold;font-size:13px;}
 .NavBar-dropdown:hover .NavBar-dropContainer{display:block;}
 .NavBar-dropContainer{display:none;position:absolute;z-index:1;background-color:#fff;padding:10px 20px 10px 0;}
-.NavBar-dropitem{display:block;margin:15px 0;}
+.NavBar-dropitem{display:block;margin:15px 0;font-size:15px;font-weight:bold;}
+.NavBar-buttonLink{display:flex;padding-top:15px;}
+.NavBar-buttonLink > div{padding:0 10px;}
+
+.Feed-title{color:#6f6f6f;text-align:center;}
+.Feed-title h2{margin:0 ;}
+.Feed-title p{margin:5px 0;padding-bottom:20px;}
