--- a/client/src/components/modules/NewPostInput.css
+++ b/client/src/components/modules/NewPostInput.css
@@ -1,2 +1,7 @@
-.NewPostInput-input{padding:15px;border:1px solid #b4b3b3;font-size:14px;width:80%;}
-.NewPostInput-button{padding:15px 20px;background-color:#a9a9a9;border:1px solid #a9a9a9;font-weight:bold;width:20%;}
+.NewPostinput-container{}
+.NewPostInput-title, .NewPostInput-body{width:100%;padding:15px;border:1px solid #f0f0f0;}
+.NewPostInput-title{font-size:16px;font-weight:bold;}
+.NewPostInput-body{resize:none;}
+.NewPostInput-type{padding:8px 20px;border:1px solid #a7a7a7;}
+.NewPostInput-submit{float:right;background-color:var(--primary);padding:8px 20px;border:none;color:#fff;
+font-size:15px;font-weight:bold;width:15%;margin-top:5px;}
