--- a/client/src/components/modules/NewPostInput.css
+++ b/client/src/components/modules/NewPostInput.css
@@ -1,7 +1,14 @@
-.NewPostinput-container{}
+.NewPostInput-container{display:flex;max-width:1200px;margin:auto;}
+.NewPostInput-container > div{padding:30px;}
+.NewPostInput-filters{width:30%;}
+.NewPostInput-message{width:70%;}
+.NewPostInput-filtersTitle h2{color:#767676;}
+.NewPostInput-filtersItem{padding:7px 0;}
+.NewPostInput-filtersItem > label{display:block;padding-bottom:2px;}
+.NewPostInput-filtersItem > select{width:100%;padding:6px;}
+
 .NewPostInput-title, .NewPostInput-body{width:100%;padding:15px;border:1px solid #f0f0f0;}
 .NewPostInput-title{font-size:16px;font-weight:bold;}
 .NewPostInput-body{resize:none;}
-.NewPostInput-type{padding:8px 20px;border:1px solid #a7a7a7;}
 .NewPostInput-submit{float:right;background-color:var(--primary);padding:8px 20px;border:none;color:#fff;
-font-size:15px;font-weight:bold;width:15%;margin-top:5px;}
+font-size:15px;font-weight:bold;width:30%;margin-top:5px;}
