--- a/client/src/components/pages/Home.css
+++ b/client/src/components/pages/Home.css
@@ -1,38 +1,28 @@
-.body h1 {
-  font-size: xx-large;
-  text-align: center;
-}
-.head {
-  font-size: xx-large;
-  color: blue;
-  text-align: center;
-}
+.Home-section{max-width:1200px;margin:auto;}
+.Home-sectionTitle{font-size:50px;font-weight:bold;font-family:Impact, sans-serif;letter-spacing:2px;color:#4e4e4e;}
+.Home-section2 > div > h1, .Home-section3 > div > h1{font-size:40px;}
 
-.home-button {
-  background-color: blue;
-  color: white;
-  border-radius: 32px;
+/* Section 1 */
+.Home-section1Image {background-image:url('../images/HomeWelcome.jpeg');background-size:cover;background-position:center;background-repeat:no-repeat;height:650px;opacity:0.3;}
+.Home-section1{position:relative;}
+.Home-section1Text{position:absolute;width:600px;top:60%;left:50%;transform:translate(-50%,-50%);}
+.Home-section1Text > h1 > p{margin:0;}
+.Home-section1Text > p{font-size:20px;}
+.Home-section1Links{padding:0;display:flex;justify-content:space-between;}
+.Home-section1Link{background-color:#fff;border:3px solid var(--primary);padding:7px 0;text-align:center;font-size:15px;width:120px;display:block;border-radius:5px;}
+.Home-section1Link:hover{background-color:var(--primary);color:#fff;}
 
-  padding: 16px;
-}
-.home-button:hover {
-  font-weight: bold;
-}
-.body p {
-  display: flex;
-  align-items: center;
-  gap: 4px;
-  justify-content: center;
-}
-.body-tech {
-  color: blue;
-}
-.section1 h2 {
-  font-weight: bold;
-  font-size: x-large;
-}
-.p1 {
-  margin-left: 15%;
-  width: 70%;
-  text-align: center;
-}
+/* Section 2 */
+.Home-section2{padding:100px 50px;}
+.Home-section2 > div > p{line-height:25px;font-size:17px;text-align:justify;}
+
+.Home-section3{background-color:#fff;padding:70px 50px;}
+.Home-section3Container{display:grid;grid-template-columns:auto auto auto;grid-gap:40px;}
+.Home-section3Item{border:2px solid #f0f0f0;}
+.Home-section3Item > div{background-size:cover;background-position:center;background-repeat:no-repeat;height:200px;width:100%;}
+.Home-section3MarketImage{background-image:url('../images/HomeMarket.jpeg');}
+.Home-section3PressImage{background-image:url('../images/HomePress.jpeg');}
+.Home-section3DiscussionImage{background-image:url('../images/HomeDiscussion.jpeg');}
+.Home-section3MessageImage{background-image:url('../images/HomeMessage.jpeg');}
+.Home-section3Item > p{padding:10px 15px;text-align:justify;}
+.Home-section3Link{background-color:var(--primary);color:#fff;padding:8px 0;text-align:center;width:50%;display:block;margin:0 auto 20px;border-radius:15px;}
