--- a/client/src/components/modules/NewCommentInput.css
+++ b/client/src/components/modules/NewCommentInput.css
@@ -1,3 +1,7 @@
 .NewCommentInput-input, .NewCommentInput-submit{border:1px solid #c8c8c8;background-color:#fff;}
 .NewCommentInput-input{width:70%;padding:7px 15px;}
-.NewCommentInput-submit{width:30%;padding:7px 0;}
+.NewCommentInput-submit{width:30%;padding:7px 0;color:#000;}
+
+@media screen and (max-width:768px){
+    .NewCommentInput-input{font-size:16px;color:#000;}
+}
