--- a/client/src/components/modules/CommentsBlock.css
+++ b/client/src/components/modules/CommentsBlock.css
@@ -1,8 +1,17 @@
 .CommentsBlock-container{background-color:#f5f5f5;border-radius:0 0 20px 20px;}
 .CommentsBlock-title{padding:10px 15px;display:flex;justify-content:space-between;}
-.CommentsBlock-commentButton, .CommentsBlock-message{width:80%;padding:6px 15px;background-color:#fff;border:1px solid #c8c8c8;font-size:14px;text-align:center;display:block;}
+.CommentsBlock-commentButton, .CommentsBlock-message{width:80%;padding:6px 15px;background-color:#fff;border:1px solid #c8c8c8;font-size:14px;text-align:center;display:block;color:#000;}
 .CommentsBlock-commentButton:hover, .CommentsBlock-message:hover{background-color:#c8c8c8;}
 .CommentsBlock-message{float:right;}
 .CommentsBlock-titleComments{width:25%;}
 .CommentsBlock-titleInput{width:50%;}
 .CommentsBlock-titleMessage{width:25%;}
+
+@media screen and (max-width:768px){
+    .CommentsBlock-title{display:grid;grid-template-columns:1fr 1fr;}
+    .CommentsBlock-title > div{width:100%;}
+    .CommentsBlock-titleComments{grid-area:1/1/2/2;}
+    .CommentsBlock-titleInput{grid-area:2/1/3/3;margin-top:10px;}
+    .CommentsBlock-titleMessage{grid-area:1/2/2/3;}
+    .CommentsBlock-commentButton, .CommentsBlock-message{width:90%;color:#000;}
+}
