--- a/client/src/components/modules/Footer.css
+++ b/client/src/components/modules/Footer.css
@@ -6,5 +6,11 @@
 .Footer-item2, .Footer-item3{width:25%;}
 .Footer-item > ul{padding:0;}
 .Footer-item1 > p{text-align:justify;}
-.Footer-copyright{padding:40px 60px;background-color:#000;color:#fff;}
+.Footer-copyright{padding:40px 15px;background-color:#000;color:#fff;}
 .Footer-Link{color:#d2d4dd;margin:2px 0;display:inline-block;}
+
+@media screen and (max-width:768px){
+    .Footer-main{display:grid;grid-template-columns:auto auto;}
+    .Footer-item{padding:20px 30px;}
+    .Footer-item1{grid-column:span 2;width:100%;}
+}
