--- a/client/src/components/pages/Discussions.css
+++ b/client/src/components/pages/Discussions.css
@@ -1,9 +1,18 @@
 .Discussions-container{display:flex;max-width:1200px;}
 .Discussions-container > div{padding:0 40px;}
 .Discussions-filters{width:30%;}
+.Discussions-phoneColumn{display:none;}
 .Discussions-list{width:70%;display:grid;grid-template-columns:1fr 1fr 1fr;grid-gap:20px;margin:10px 0;}
 .Discussions-filtersItem{padding:10px 0;}
 .Discussions-filtersItem > ul{list-style:none;padding:0;margin:0;}
 .Discussions-filtersItem > ul > li{padding:3px 5px;}
 .Discussions-filtersLabel{font-size:15px;}
 .Discussions-nothing{padding:20px 0;}
+
+@media screen and (max-width:768px){
+    .Discussions-filters{display:none;}
+    .Discussions-listColumn{display:none;}
+    .Discussions-container > div{padding:0 10px;}
+    .Discussions-list{width:100%;grid-template-columns:1fr 1fr;grid-gap:10px;}
+    .Discussions-phoneColumn{display:block;}
+}
