--- a/client/src/components/modules/SinglePostDiscussion.css
+++ b/client/src/components/modules/SinglePostDiscussion.css
@@ -7,3 +7,7 @@
 .SinglePostDiscussion-linkContainer{display:none;position:absolute;top:0;width:100%;height:100%;background-color:rgba(255,255,255,0.9);border-radius:10px;}
 .SinglePostDiscussion-button{color:#fff;background-color:var(--primary);position:absolute;top:50%;left:50%;transform:translate(-50%,-50%);border:none;
 padding:6px 0;border-radius:10px;font-size:15px;width:50%;text-align:center;font-family:'Courier New', Courier, monospace, sans-serif;font-weight:bold;cursor:pointer;}
+
+@media screen and (max-width:768px){
+    .SinglePostDiscussion-container{margin:10px 0;}
+}
