--- a/client/src/components/modules/Chat.css
+++ b/client/src/components/modules/Chat.css
@@ -2,3 +2,8 @@
 .Chat-title{padding:15px;margin:0;background-color:#f0f0f0;}
 .Chat-messageList{padding:10px 20px;max-height:68vh;overflow:auto;}
 .Chat-newMessage{position:absolute;bottom:10px;width:100%;}
+
+@media screen and (max-width:768px){
+    .Chat-newMessage{bottom:0;}
+    .Chat-messageList{padding:10px;}
+}
