--- a/client/src/components/modules/NewMessageInput.css
+++ b/client/src/components/modules/NewMessageInput.css
@@ -1,3 +1,7 @@
-.NewMessage-container{padding:10px 20px;width:100%;}
-.NewMessage-input{width:85%;padding:10px 15px;font-size:15px;border:1px solid #e5e5e5;background-color:#f0f0f0;}
-.NewMessage-submit{width:15%;padding:11px 0;background-color:#f0f0f0;border:1px solid #e5e5e5;}
+.NewMessage-container{padding:10px 20px;background-color:#fff;}
+.NewMessage-input{width:80%;padding:10px 15px;font-size:15px;border:1px solid #e5e5e5;background-color:#f0f0f0;}
+.NewMessage-submit{width:20%;padding:11px 0;background-color:#f0f0f0;border:1px solid #e5e5e5;}
+
+@media screen and (max-width:768px){
+    .NewMessage-container{padding:5px 10px;}
+}
