--- a/client/src/components/modules/SinglePost.css
+++ b/client/src/components/modules/SinglePost.css
@@ -9,6 +9,7 @@
 .SinglePost-title{font-weight:bold;font-size:17px;}
 .SinglePost-content{font-size:15px;}
 .SinglePost-footer{padding:10px 20px;}
+.SinglePost-image{width:100%;border-radius:10px;}
 
 @media screen and (max-width:768px){
     .SinglePost-filtersList > span{margin:3px;display:inline-block;}
