--- a/client/src/components/modules/SingleComment.css
+++ b/client/src/components/modules/SingleComment.css
@@ -1,3 +1,4 @@
-.SingleComment-container > div{display:inline-block;border:1px solid #e5e5e5;padding:5px 10px;margin:6px 15px;background-color:#eeeeee;
+.SingleComment-container > div{display:inline-block;border:1px solid #e5e5e5;padding:3px 10px;margin:6px 15px;background-color:#eeeeee;
 color:#606060;border-radius:5px;color:#6f6f6f;}
-.SingleComment-name{font-size:14px;font-weight:bold;}
+.SingleComment-name{font-size:13px;font-weight:bold;}
+.SingleComment-text{font-size:14px;}
