--- a/client/src/components/modules/SinglePressPost.css
+++ b/client/src/components/modules/SinglePressPost.css
@@ -1,3 +1,2 @@
-.SinglePressPost-container{background-color:#fff;padding:10px 15px;margin:20px 0;}
-.SinglePost-title{}
-.SinglePost-content{}
+.SinglePressPost-container{background-color:#fff;padding:6px 15px;margin:20px 0;border-radius:10px;border:2px solid #e5e5e5;}
+.SinglePost-title, .SinglePost-content{margin:0;padding:5px 0;}
