--- a/client/src/components/modules/SinglePostDiscussion.css
+++ b/client/src/components/modules/SinglePostDiscussion.css
@@ -10,4 +10,6 @@ padding:6px 0;border-radius:10px;font-size:15px;width:50%;text-align:center;font
 
 @media screen and (max-width:768px){
     .SinglePostDiscussion-container{margin:10px 0;}
+    .SinglePostDiscussion-category{font-size:12px;}
+    .SinglePostDiscussion-content{font-size:14px;}
 }
