--- a/client/src/components/pages/Markets.css
+++ b/client/src/components/pages/Markets.css
@@ -2,12 +2,13 @@
 .Markets-container > div{padding:0 40px;}
 .Markets-filters{width:30%;}
 .Markets-list{width:60%;}
-.Markets-filtersTitle{color:#717171;}
+.Markets-filtersTitle{color:#717171;display:inline-block;}
 .Markets-filtersItem{padding:10px 0;}
 .Markets-filtersItem > h4{margin:0;}
 .Markets-filtersItem > ul{list-style:none;padding:0;margin:0;}
 .Markets-filtersItem > ul > li{padding:3px 5px;}
 .Markets-filtersLabel{font-size:15px;}
+.Markets-filtersHeader{display:flex;justify-content:space-between;}
 .Markets-nothing{padding:20px 0;}
 
 @media screen and (max-width:768px){
