--- a/client/src/components/modules/NavBar.css
+++ b/client/src/components/modules/NavBar.css
@@ -6,7 +6,7 @@ a{text-decoration:none;color:#000;}
 li{list-style-type:none;}
 
 .NavBar-container{background-color:#fff;border-bottom:2px solid #f0f0f0;position:fixed;width:100%;height:67px;top:0;z-index:1;}
-.NavBar-content{display:flex;justify-content:space-between;align-items:center;}
+.NavBar-content{display:flex;justify-content:space-between;align-items:center;max-width:1100px;margin:auto;}
 .NavBar-title{color:var(--primary);margin:0 30px;font-family:Chalkduster, fantasy;font-size:22px;}
 .NavBar-linkContainer{padding:23px;display:flex;justify-content:center;}
 .NavBar-link{margin:0 15px;font-size:15px;font-weight:bold;}
