--- a/client/src/components/pages/Discussions.css
+++ b/client/src/components/pages/Discussions.css
@@ -1,8 +1,8 @@
-.Discussions-container{display:flex;max-width:1200px;}
+.Discussions-container{display:flex;max-width:1100px;margin:auto;}
 .Discussions-container > div{padding:0 40px;}
-.Discussions-filters{width:30%;}
+.Discussions-filters{width:25%;}
 .Discussions-phoneColumn{display:none;}
-.Discussions-list{width:70%;display:grid;grid-template-columns:1fr 1fr 1fr;grid-gap:20px;margin:10px 0;}
+.Discussions-list{width:75%;display:grid;grid-template-columns:1fr 1fr 1fr;grid-gap:20px;margin:10px 0;}
 .Discussions-filtersItem{padding:10px 0;}
 .Discussions-filtersItem > ul{list-style:none;padding:0;margin:0;}
 .Discussions-filtersItem > ul > li{padding:3px 5px;}
