--- a/client/src/components/pages/Presses.css
+++ b/client/src/components/pages/Presses.css
@@ -1,4 +1,4 @@
-.Presses-container{max-width:750px;padding:30px 60px;}
+.Presses-container{max-width:750px;padding:30px 60px;margin:auto;}
 
 @media screen and (max-width:768px){
     .Presses-container{padding:20px;}
